<resources>
    <string name="app_name">Eyes On</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eyesOn">아이즈온</string>
    <string name="alarm">알림</string>
    <string name="setting">설정</string>
    <string name="button_back">뒤로가기 버튼</string>
    <string name="frag_complaints">민원 신청 및 내 민원 확인 화면</string>
    <string name="frag_main">메인화면입니다</string>
    <string name="frag_my_complaints">내 민원 확인</string>
    <string name="frag_my_complaints_list">내가 신청한 민원 목록</string>
    <string name="frag_complaints_submit">민원 신청 화면</string>
    <string name="frag_complaints_submit_camera">사진 다시 찍기</string>
    <string name="google_login_button">구글 로그인 버튼</string>
    <string name="eyeson_main">로그인 화면입니다</string>
    <string name="frag_complaints_record">민원내용 입력 화면 입니다</string>
    <string name="btn_complaints_submit">전송하기 버튼</string>
    <string name="btn_record">녹음 버튼</string>
    <string name="frag_text_detection">글자 인식 화면입니다 아무곳이나 누르면 다시 인식하여 알려줍니다</string>
    <string name="frag_scan_obstacle">장애물 인식 화면입니다</string>
    <string name="btn_disconnect">연결 종료</string>
    <string name="btn_camera_switch">카메라 전환</string>
    <string name="btn_camera">카메라</string>
    <string name="btn_sound_mode">소리 출력 모드</string>
    <string name="btn_mic">마이크</string>
    <string name="frag_blind_help">엔젤과 연결</string>
    <string name="lottie_loading">엔젤과 연결중입니다. 잠시만 기다려주세요</string>
    <string name="frag_find_object">물건 찾기 화면입니다 찾을 물건을 입력해 주세요</string>
    <string name="frag_setting">설정화면 입니다</string>
    <string name="frag_noti">알림 확인 화면입니다</string>
</resources>