<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.blind.scanobstacle.ScanObstacleFragment"
        android:background="@drawable/gradient_user"
        >

        <android.opengl.GLSurfaceView
            android:id="@+id/surfaceview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="H,3:4"/>

        <ImageView
            android:id="@+id/input_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="H,3:4"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_top"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/frag_find_object">

            <FrameLayout
                android:id="@+id/frame_layout_camera"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/gradient_camera">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_layout_top"
                    android:layout_marginTop="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/frag_complaints_submit">
                        <ImageButton
                            android:id="@+id/btn_back"
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:layout_marginStart="8dp"
                            android:src="@drawable/btn_blind_back_yellow"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_gravity="center_vertical"
                            android:background="@color/none"
                            android:contentDescription="@string/button_back"/>

                        <TextView
                            android:id="@+id/iv_logo"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:contentDescription="@string/frag_complaints"
                            android:fontFamily="@font/noto_sans_bold"
                            android:gravity="center"
                            android:importantForAccessibility="no"
                            android:includeFontPadding="false"
                            android:text="장애물 인식"
                            android:textColor="@color/blind_yellow"
                            android:textSize="32sp" />
                    </FrameLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>