<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.d201.eyeson.view.blind.complaints.ComplaintsSubmitRecordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_user"
        tools:context=".view.blind.complaints.ComplaintsSubmitRecordFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_top"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/frag_complaints_record"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/tway_air"
                android:gravity="center"
                android:importantForAccessibility="no"
                android:text="민원 내용 입력"
                android:textColor="@color/blind_yellow"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:background="@color/none"
                android:contentDescription="@string/button_back"
                android:paddingHorizontal="16dp"
                android:src="@drawable/btn_blind_back_yellow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_top">

            <TextView
                android:id="@+id/tv_title_record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="56dp"
                android:fontFamily="@font/tway_air"
                android:gravity="center"
                android:text="민원 내용을 녹음해 주세요"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:layout_constraintTop_toTopOf="parent" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/btn_record"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_marginVertical="32dp"
                android:contentDescription="@string/btn_record"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_record"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/animation_record" />

            <TextView
                android:id="@+id/tv_record_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="32dp"
                android:gravity="center|top"
                android:fontFamily="@font/tway_air"
                android:text="@{vm.recordText}"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_record"
                tools:text="보도 블럭이 파손되어 있습니다." />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="16dp"
                android:contentDescription="@string/btn_complaints_submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_record_result">

                <TextView
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="56dp"
                    android:background="@drawable/btn_border_yellow"
                    android:enabled="false"
                    android:fontFamily="@font/tway_air"
                    android:gravity="center"
                    android:importantForAccessibility="no"
                    android:padding="24dp"
                    android:text="전송"
                    android:textColor="@color/black"
                    android:textSize="32sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>