<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_user"
        tools:context=".view.blind.complaints.ComplaintsFragment">
        <LinearLayout
            android:id="@+id/layout_tv_logo"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            android:contentDescription="@string/frag_main">
            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/btn_back"
                android:contentDescription="@string/button_back"/>
            <TextView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="110dp"
                android:contentDescription="@string/frag_complaints"
                android:fontFamily="@font/noto_sans_medium"
                android:importantForAccessibility="no"
                android:includeFontPadding="false"
                android:text="민원 신청 및 확인"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/layout_tv_logo"
            app:layout_constraintBottom_toBottomOf="parent">


            <TextView
                android:id="@+id/btn_new_complaints"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:text="민원 신청"
                android:textSize="40sp"
                android:fontFamily="@font/noto_sans_bold"
                android:textColor="@color/blind_yellow"
                android:background="@drawable/btn_border_white"
                android:gravity="center"
                android:elevation="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/divider_center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="56dp"/>

            <View
                android:id="@+id/divider_center"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/btn_my_complaints"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:text="내 민원 확인"
                android:textSize="40sp"
                android:fontFamily="@font/noto_sans_bold"
                android:textColor="@color/blind_yellow"
                android:background="@drawable/btn_border_white"
                android:gravity="center"
                android:elevation="10dp"
                app:layout_constraintTop_toBottomOf="@id/divider_center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="56dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>